<resources>
    <string name="app_name">WatchMe</string>
    <string name="search_button">Search Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="profile_image">Profile Image</string>
    <string name="hello">Hello</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="guest">Guest</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="profile">profile</string>
    <string name="show_more">Show More</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="show_less">Show less</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_favourite_movies_found">No favourite movies found.</string>
    <string name="your_favourites">Your Favourites(%1$d)</string>
    <string name="search">Search</string>
    <string name="search_movie_title">Search Movie Title</string>
    <string name="no_movies_found">No movies found</string>
    <string name="click_the_button_to_add_movies">Click the \"+\" button to add movies.</string>
    <string name="intro_image">intro image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="intro_description">All the movies\nyou care about,\nin one place.</string>
    <string name="get_started">Get Started</string>
    <string name="back_button">back button</string>
    <string name="more_options_button">more options button</string>
    <string name="about_page_title">About WatchMe</string>
    <string name="about_page_description">This is the amazing WatchMe application.</string>
    <string name="app_version_text">App Version</string>
    <string name="app_version_info">- 1.0.0</string>
    <string name="developed_by_text">Developed By:</string>
    <string name="developers_info">- Yaniv, Orel and Idan.</string>
    <string name="libraries_used_text">Libraries Used</string>
    <string name="libraries_used_info">- Glide: Image loading and caching\n- Room: Local database storage\n- Navigation Component: In-app navigation\n- TapTargetView: Feature discovery\n- Material Design Components: UI elements</string>
    <string name="contact_text">Contact</string>
    <string name="contact_info">Email: Watch-Me@example.com\nWebsite: WatchMe.example.com</string>
    <string name="add_movie_page_title">Add Movie</string>
    <string name="movie_title_text">Movie Title</string>
    <string name="add_poster_text">Add Poster</string>
    <string name="movie_rating_text">Movie Rating</string>
    <string name="movie_description_text">Movie Description</string>
    <string name="add_images_optional_text">Add Images (Optional)</string>
    <string name="choose_genres_text">Choose Genre\'s</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="thriller">Thriller</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="fantasy">Fantasy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="add">Add</string>
    <string name="edit_movie_page_title">Edit Movie</string>
    <string name="edit_poster_text">Edit Poster</string>
    <string name="edit_images_optional_text">Edit Images (Optional)</string>
    <string name="save">Save</string>
    <string name="login_page_title">Welcome to Watch Me</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="want_to_create_one">Want to create one?</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_now">Not now</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="example_email">Email@example.com</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="your_nmovies_0">Your\nMovies(0)</string>
    <string name="begin_by_adding_a_new_movie">Begin by adding a new movie</string>
    <string name="tap_here_to_create_your_first_movie_entry">Tap here to create your first movie entry</string>
    <string name="all_movies">All Movies(%1$d)</string>
    <string name="avengers_endgame">Avengers: Endgame</string>
    <string name="the_batman">The Batman</string>
    <string name="interstellar">Interstellar</string>
    <string name="avengers_description">After the devastating events of Avengers: Infinity War (2018), the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="batman_description">When a sadistic serial killer begins murdering key political figures in Gotham, the Batman is forced to investigate the city\'s hidden corruption and question his family\'s involvement.</string>
    <string name="interstellar_description">When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a team of researchers, to find a new planet for humans.</string>
    <string name="title_is_required">Title is required</string>
    <string name="rating_is_required">Rating is required</string>
    <string name="enter_a_valid_rating_0_10">Enter a valid rating (0–10)</string>
    <string name="description_is_required">Description is required</string>
    <string name="at_least_one_genre_is_required">At least one genre is required.</string>
    <string name="poster_is_required">Poster is required</string>
    <string name="movie_added_successfully">Movie added successfully!</string>
    <string name="failed_to_load_image">Failed to load image: %1$s</string>
    <string name="movie_updated_successfully">Movie updated successfully!</string>
    <string name="movie_deleted_successfully">Movie Deleted Successfully.</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="are_you_sure_you_want_to_delete_this_movie">Are you sure you want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="movie_title_movie_rating">%1$s · %2$f ⭐</string>
    <string name="no_movies_were_found">No movies were found</string>
    <string name="explore">Explore</string>
    <string name="show_more_movies">Show more movies</string>
    <string name="favorites_btn">favorite_btn</string>
    <string name="top_rated_upcoming">Top Rated &amp; Upcoming</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="loading">loading…</string>
    <string name="found_movies">Found Movies (%1$d): </string>
    <string name="load_more">Load More</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_amp_upcoming"><![CDATA[Popular & Upcoming]]></string>

</resources>